# jetson-nano-communication

./: .gitignore  CMakeLists.txt  README.md  macros.md
JETGPIO/EXAMPLES_C++/: .jetgpio_example.cpp.swp  jetgpio_PWM_example  jetgpio_PWM_example.cpp  jetgpio_example
client/: CMakeLists.txt  client.cpp
client-tutorial/: CMakeLists.txt  client.cpp
enet-1.3.18/: Makefile  Makefile.in  callbacks.lo  compress.lo  config.status  configure  host.lo  libenet.la  libtool  packet.lo  peer.lo  unix.lo  win32.lo
enet-1.3.18/.libs/: libenet.so.7.0.6
enet-1.3.18/autom4te.cache/: requests
examples/broadcast-server/: CMakeLists.txt  simple-broadcast-server.cpp
examples/client/: CMakeLists.txt  Sconscript  echo-client.cpp
examples/server/: CMakeLists.txt  Motor.h  SConscript  echo-handler.hpp  echo-server.cpp  motor-control-example.cpp
include/: serial.hpp
lib/serial/: serial.h
server/: CMakeLists.txt  server.cpp
server-tutorial/: CMakeLists.txt  server.cpp
socket-forwarder/: CMakeLists.txt  socket-forwarder.cpp
src/: SConscript  SerialPort.cpp  SerialPort.hpp  arduino.hpp  edpex.cpp  main.cpp  motor-control-example.cpp  motor.h  motor.hpp  readSerial.cpp  server.cpp  server.hpp  types.hpp
udpexamples/: test  udpclient.cpp  udpserver.cpp
udpexamples/client/: CMakeLists.txt  udpclient.cpp
udpexamples/server/: CMakeLists.txt  udpserver.cpp
websocketpp/websocketpp/: close.hpp  connection.hpp  endpoint.hpp
websocketpp/websocketpp/impl/: connection_impl.hpp
websocketpp/websocketpp/roles/: client_endpoint.hpp
websocketpp/websocketpp/transport/asio/: endpoint.hpp
